--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,6 +137,12 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.3.1"
 
 
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+
+    implementation 'id.zelory:compressor:3.0.1'
+
+
 
 
 
